classDiagram
    class User {
        int id
        string username
        string passwordHash
        string role
        timestamp lastAccessed
    }

    class Tenant {
        int id
        string fullName
        string phoneNumber
        string originRegion
        timestamp createdAt
    }

    class Room {
        int id
        string roomNumber
        string roomType
        int monthlyPrice
        boolean isActive
    }

    class Lease {
        int id
        int tenantId
        int roomId
        timestamp startDate
        timestamp endDate
        boolean isActive
    }

    class Invoice {
        int id
        int leaseId
        int amount
        timestamp dueDate
        string duitkuReference
        string callbackPayload
        string status
    }

    class ChatbotMessage {
        int id
        int tenantId
        string direction
        string message
        timestamp sentAt
    }

    class Notification {
        int id
        int tenantId
        int invoiceId
        int chatbotMessageId
        string type
        string status
    }

    class Complaint {
        int id
        int tenantId
        string description
        string status
        timestamp createdAt
    }

    Tenant "1" --> "*" Complaint
    Tenant "1" --> "*" Lease
    Room "1" --> "*" Lease
    Lease "1" --> "*" Invoice
    Tenant "1" --> "*" ChatbotMessage
    Tenant "1" --> "*" Notification
    Invoice "1" --> "*" Notification